# structured-light

./: .clang-format  .gitignore  README.md
01-structured-light-with-blender-and-halide/: CMakeLists.txt  README.md
01-structured-light-with-blender-and-halide/scene/: structured-light.blend
01-structured-light-with-blender-and-halide/scripts/: create_patterns.py
01-structured-light-with-blender-and-halide/src/: main.cpp
02-structured-light-with-pbrt/: CMakeLists.txt
02-structured-light-with-pbrt/configs/: scene.pbrt.in
02-structured-light-with-pbrt/geometry/: suzanne.blend
02-structured-light-with-pbrt/src/: main.cpp
